peac_dev/force-app/main/default/objects/Rate__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city where the business is located.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The city where the business is located.</inlineHelpText>
    <label>City</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>