peac_dev/force-app/main/default/objects/Rate__c/fields/City_Transit_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>City_Transit_Tax_Rate__c</fullName>
    <description>Field that stores city transit tax rate.</description>
    <inlineHelpText>Enter city transit tax rate.</inlineHelpText>
    <label>City Transit Tax Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>