peac_dev/force-app/main/default/objects/Rate__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>The county the business is located in.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The county the business is located in.</inlineHelpText>
    <label>County</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>