peac_dev/force-app/main/default/objects/Rate__c/fields/County_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>County Code</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>