peac_dev/force-app/main/default/objects/Rate__c/fields/County_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>County_Tax_Rate__c</fullName>
    <description>Field that stores county tax rate.</description>
    <inlineHelpText>Enter county tax rate.</inlineHelpText>
    <label>County Tax Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>