peac_dev/force-app/main/default/objects/Rate__c/fields/County_Transit_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>County_Transit_Tax_Rate__c</fullName>
    <description>Field that stores county transit tax rate</description>
    <inlineHelpText>Enter county transit tax rate.</inlineHelpText>
    <label>County Transit Tax Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>