peac_dev/force-app/main/default/objects/Rate__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <description>Field that store the code of the tax type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the tax type code.</inlineHelpText>
    <label>Rate Code</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>