peac_dev/force-app/main/default/objects/Rate__c/fields/Rate_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code_Description__c</fullName>
    <description>Field that stores the description of the tax type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a description of the tax type.</inlineHelpText>
    <label>Rate Code Description</label>
    <type>TextArea</type>
</CustomField>