peac_dev/force-app/main/default/objects/Rate__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State your business is located in.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>State your business is located in.</inlineHelpText>
    <label>State</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>