peac_dev/force-app/main/default/objects/Rate__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Code</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>