peac_dev/force-app/main/default/objects/Rate__c/fields/State_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Rate__c</fullName>
    <description>Field that stores state tax rate.</description>
    <inlineHelpText>Enter state tax rate.</inlineHelpText>
    <label>State Tax Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>