peac_dev/force-app/main/default/objects/Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>State_Code__c</columns>
    <columns>County__c</columns>
    <columns>County_Code__c</columns>
    <columns>City__c</columns>
    <columns>City_Code__c</columns>
    <columns>Rate_Code__c</columns>
    <columns>Rate_Code_Description__c</columns>
    <columns>State_Tax_Rate__c</columns>
    <columns>County_Tax_Rate__c</columns>
    <columns>County_Transit_Tax_Rate__c</columns>
    <columns>City_Tax_Rate__c</columns>
    <columns>City_Transit_Tax_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>